--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,11 @@
 body {
     /* more on this crazy alphanumerical value in a minute! */
-    color: greenyellow;
-    font-family: Helvetica, Arial, sans-serif;
-  }
+    color:olive;
+    font-family: brush script mt, sans-serif;
+    background-image: url(../images/b-g1.jpeg);
+    font-size: 30px;
+   
+}
 
   header {
     padding: 10px 15px 20px 25px;
@@ -16,11 +19,16 @@ body {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    text-shadow: 2px 2px black;
+   
+    
+
     }
 
   header a {
     text-decoration: none;
     color: white;
+    
     }
 
 header nav li {
@@ -37,11 +45,11 @@ header nav li {
     header nav ul li a {
         padding: 10px 15px;
         font-weight: lighter;
-        font-size: 1.55vw;
+        font-size: 30px;
       }
 
       header nav ul li a:hover {
-        background: #fce138;
+        background: orange;
         color: #024e76;
         border-radius: 15px;
         text-shadow: none;
@@ -49,10 +57,11 @@ header nav li {
 
       header h1 {
         font-weight: bold;
-        font-size: 36px;
+        font-size: 70px;
         color: #fce138;
         margin: 0;
         display: inline;
+        text-shadow: 2px 2px black;
     }
 
     * {
@@ -62,60 +71,128 @@ header nav li {
 
 
     /* hero*/
-    .hero {
-        background-image: url("../images/hero-bg.jpeg");
-        align-items: flex-start;
-        background-size: cover;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        background-position: 80%;
-        background-attachment: fixed;
+
+
+    
+    * {
+        box-sizing: border-box;
+    }
+    .first .flex-row { 
+  
+    flex-flow: wrap;
+    flex: 1 1 100;
+    text-align: left;
+    display: inline-block;
+    width:30%;
+ 
+    }
+   
+    .first .text {
+      
+        position: relative;
+        
+        margin-left: 10em;
+    margin-right: 2em;
+    justify-content: space-between;
+
+
+  
     }
 
-    .hero-cta {
-        width: 100%;
-        text-align: center;
-        margin: 3.5%;
-        color: #fff;
-        font-size: 18px;
-        line-height: 1.2;
-      }
+     /*flexbox*/
+    .text .flex-container {
+        display: flex;
+      align-content: space-around;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+     flex-direction: row;
+     padding-top: 30px;
+     height: 800px;
+        flex-shrink: 1;
+        flex-grow: 1;
 
-      .hero-cta h2 {
-        font-style: italic;
-        font-size: 55px;
-        color: #fce138;
-      }
+    }
+/*footer*/
+
+ .div1 {
+    width: 700px;
+    height: 400px;
+    border-radius: 15px 30px;
+    border: 1px solid #024e76;
+    box-shadow: 3px 3px black;
+   
+  
+    flex-shrink: 1;
+        flex-grow: 1;
+  }
+  
+  .div2 {
+    width: 300px;
+    height: 200px;
+    border-radius: 15px 30px;
+    box-shadow: 3px 3px black;
+    flex-shrink: 1;
+        flex-grow: 1;
+    
+  }
+   .div3 {
+    width: 300px;
+    height: 200px;
+    border: 1px solid red;
+    border-radius: 15px 30px;
+    box-shadow: 3px 3px black;
+    background-image: url("../images/b-g2.jpeg");
+    flex-shrink: 1;
+        flex-grow: 1;
+  }
+  .first .text .flex-container .div4 {
+    width: 300px;
+    height: 200px;
+    border-radius: 15px 30px;
+    border: 1px solid red;
+    box-shadow: 3px 3px black;
+    background-image: url("../images/b-g2.jpeg");
+    flex-shrink: 1;
+        flex-grow: 1;
+  }
+  .first .text .flex-container .div5 {
+    width: 300px;
+    height: 200px;
+    border-radius: 15px 30px;
+    border: 1px solid red;
+    box-shadow: 3px 3px black;
+    background-image: url("../images/b-g2.jpeg");
+    flex-shrink: 1;
+        flex-grow: 1;
+  }
+ iframe {
+    display: flex;
+    border-radius: 15px 30px;
+   
+}
+ .frame {
+
+        position: relative;
+        height: 100%;
+        width: 100%; 
+    }
 
 
 
-
-
-      .section-title {
-        font-size: 48px;
-        color: #024e76;  
-        border-bottom: 3px solid;
-        padding-bottom: 20px;
-        text-align: left;
-        margin: 0 auto 35px auto;
-        width: 50%;
-      }
+  
+    footer a {
+        text-decoration: none;
+        color: rgb(5, 5, 5);
       
-      .primary-border {
-        border-color: #fce138;
-      }
-      
-      .secondary-border {
-        border-color: #39a6b2;
-      }
-
-/*foote*/
-
-        footer nav li {
+        }
+        #over { 
+            font-size:5em; position:absolute; top:20px; left:20px; z-index:2 }
+    
+    footer nav li {
         display: inline;
         }
-        footer nav ul {
+     footer nav ul {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -130,16 +207,41 @@ header nav li {
           }
     
           footer nav ul li a:hover {
-            background: #fce138;
+            background:orange;
             color: #024e76;
             border-radius: 15px;
             text-shadow: none;
           }
-    
-          footer h1 {
-            font-weight: bold;
-            font-size: 36px;
-            color: #fce138;
-            margin: 0;
-            display: inline;
-        }
+
+
+          
+          @media screen and (max-width: 768px) {
+          
+            .first .flex-row {
+              padding: 30px 15px;
+            }
+          
+            .flex-row h1 {
+              flex: 1 100%;
+              text-align: center;
+            }
+          
+            .text {
+              flex: 1 100%;
+              text-align: center;
+              justify-content: center;
+            }
+          
+            .flex-container {
+              flex: 0 32%;
+              margin-right: 0;
+              margin-top: 15px;
+              margin-bottom: 15px;
+            }
+          
+            .div1 .div2 .div3 .div4 .div5 {
+              flex: 30%;  
+            }
+          
+          }
+         
